partials, logic, elements

--- a/index.html
+++ b/index.html
@@ -31,17 +31,15 @@
                </ul>
           </div>
 
-          <div id="board">
-          </div>
-
-
-          <div class="firstPage ">
-
+          <div class="mainPage">
+               <div id="board"></div>
+               <!-- <div class="startScreen">400 x 400</div> -->
           </div>
 
           <div class="control">
                <i class="far fa-play-circle" id="play"></i>
                <i class="far fa-pause-circle" id='pause'></i>
+               <i class="fas fa-redo-alt" id='rew'></i>
           </div>
 
           <footer>
