--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
                <ul class='info__elements'>
                     <li>width:<span></span></li>
                     <li>height: <span></span></li>
-                    <li>elements: <span></span></li>
+                    <li>resolution:<span></span></li>
+                    <li>cells: <span></span></li>
                     <li>alive:<span></span></li>
+                    <li>steps:<span></span></li>
                </ul>
           </div>
 
