--- a/index.html
+++ b/index.html
@@ -35,12 +35,54 @@
 
           <div class="mainPage">
                <div id="board"></div>
-               <!-- <div class="startScreen">400 x 400</div> -->
+               <div class="startScreen">
+                    <div class="chooseScreen">
+                         <div class="board-width">
+                              <div class='arrow up'><i class="fas fa-arrow-up"></i></div>
+                              <div class='value'>800</div>
+                              <div class='arrow down'><i class="fas fa-arrow-down"></i></div>
+
+                              <div class="info_value">width</div>
+                         </div>
+
+                         <div class="board-height">
+                              <div class='arrow up'><i class="fas fa-arrow-up"></i></div>
+                              <div class='value'>450</div>
+                              <div class='arrow down'><i class="fas fa-arrow-down"></i></div>
+
+                              <div class="info_value">height</div>
+                         </div>
+
+                         <div class="resolution">
+                              <div class='arrow up'><i class="fas fa-arrow-up"></i></div>
+                              <div class='value'>4</div>
+                              <div class='arrow down'><i class="fas fa-arrow-down"></i></div>
+
+                              <div class="info_value">resolution</div>
+                         </div>
+
+                         <div class="speed">
+                              <div class='arrow up'><i class="fas fa-arrow-up"></i></div>
+                              <div class='value'>100</div>
+                              <div class='arrow down'><i class="fas fa-arrow-down"></i></div>
+
+                              <div class="info_value">delay</div>
+                         </div>
+
+                         <div class="elements">
+                              <div class='arrow up'><i class="fas fa-arrow-up"></i></div>
+                              <div class='value'>40</div>
+                              <div class='arrow down'><i class="fas fa-arrow-down"></i></div>
+
+                              <div class="info_value">elements</div>
+                         </div>
+
+                    </div>
+               </div>
           </div>
 
           <div class="control">
                <i class="far fa-play-circle" id="play"></i>
-               <i class="far fa-pause-circle" id='pause'></i>
                <i class="fas fa-redo-alt" id='rew'></i>
           </div>
 
