--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li>resolution:<span></span></li>
                     <li>cells: <span></span></li>
                     <li>alive:<span></span></li>
-                    <li>steps:<span></span></li>
+                    <li>cycles:<span></span></li>
                </ul>
           </div>
 
@@ -55,7 +55,7 @@
 
                          <div class="resolution">
                               <div class='arrow up'><i class="fas fa-arrow-up"></i></div>
-                              <div class='value'>4</div>
+                              <div class='value'>5</div>
                               <div class='arrow down'><i class="fas fa-arrow-down"></i></div>
 
                               <div class="info_value">resolution</div>
@@ -64,7 +64,7 @@
                          <div class="speed">
                               <div class='arrow up'><i class="fas fa-arrow-up"></i></div>
                               <div class='value'>100</div>
-                              <div class='arrow down'><i class="fas fa-arrow-down"></i></div>
+                              <div class='arrow down'><i class=" fas fa-arrow-down"></i></div>
 
                               <div class="info_value">delay</div>
                          </div>
@@ -78,11 +78,13 @@
                          </div>
 
                     </div>
+                    <div class="infoPage">
+                         <i class="far fa-play-circle" id="play"></i><span class='play'>PLAY</span>
+                    </div>
                </div>
           </div>
 
           <div class="control">
-               <i class="far fa-play-circle" id="play"></i>
                <i class="fas fa-redo-alt" id='rew'></i>
           </div>
 
