--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      <div class="wrapper">
           <nav class="nav">
                <div class="nav__title">Game Of Life
-                    <img src="/src/img/leafts.png">
+                    <img src="./src/img/leafts.png">
                </div>
           </nav>
           <div class="info">
