--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <link rel="stylesheet" type="text/css" href="./css/main.css">
+     <link rel="stylesheet" type="text/css" href="dist/css/main.css">
 
      <link href="https://fonts.googleapis.com/css?family=Averia+Libre:400,400i,700,700i|Carter+One|Skranji:400,700&amp;subset=latin-ext"
           rel="stylesheet">
@@ -92,7 +92,7 @@
                Maciej Fialkowski
           </footer>
      </div>
-     <script src="./src/js/app.js"></script>
+     <script src="dist/js/app.js"></script>
 </body>
 
 </html>
